ChangeLog for package tm.plugin.koRpus

changes in version 0.02-3 (2019-04-02)
unreleased:
  - this release is under development
fixed:
  - readCorpus(): solved a cryptic warning when more than one text was tokenized
added:
  - docTermMatrix(): new method to generate document-term matrices
  - query(): new method, extending the generic of koRpus >= 0.11-6
  - filterByClass(): new method, extending the generic of koRpus >= 0.11-6
  - jumbleWords(): new method, extending the generic of koRpus >= 0.11-6
  - clozeDelete(): new method, extending the generic of koRpus >= 0.11-6
  - cTest(): new method, extending the generic of koRpus >= 0.11-6
  - textTransform(): new method, extending the generic of koRpus >= 0.11-6
  - show(): new method for objects of class kRp.hierarchy
changed:
  - depends on koRpus >= 0.11-6 now
  - deoends on the Matrix package now (for docTermMatrix())

changes in version 0.02-2 (2019-01-18)
fixed:
  - readCorpus(), kRpSource(): added missing imports from packages tm, NLP
    and parallel
  - readCorpus(): fixed status message formatting
  - corpusTm(): removed useless "level" argument and corrected the output
  - readCorpus(): removed unused "level" argument
  - corpusFiles(): now also works with flat hierarchy objects
added:
  - readCorpus(): can now also import data frames in TIF format, including
    support for hierarchal categories
  - tif_as_corpus_df(): new S4 method to transform a kRp.hierarchy object
    into a TIF compliant data frame
changed:
  - readCorpus(): the tm corpora now include full hierarchy metadata
  - removed pre-hierarchy portions from internal function whatIsAvailable()

changes in version 0.02-1 (2018-07-29)
changed:
  - vignette: also includes info on readCorpus()
  - tests: adjusted test standards to new object class
added:
  - kRp.hierarchy: new S4 class to replace kRp.sourcesCorpus and
    kRp.topicCorpus to allow more generic nesting of hierarchical levels