@@ -1,8 +1,9 @@
 Package: tm.plugin.koRpus
 Type: Package
 Title: A Compatibility Plugin Package for 'tm' and 'koRpus'
-Description: Provides classes and methods to enhance the ability to use the 'koRpus' package together with the 'tm' package. It is in its early stages. To ask for help, report bugs, suggest feature improvements, or discuss
-                         the global development of the package, please subscribe to the koRpus-dev mailing list (<http://korpusml.reaktanz.de>).
+Description: Provides classes and methods to enhance the ability to use the 'koRpus' package together with the 'tm' package. It is in its early stages. To ask for help, report
+                    bugs, suggest feature improvements, or discuss the global development of the package, please subscribe to the koRpus-dev mailing list
+                    (<http://korpusml.reaktanz.de>).
 Author: m.eik michalke [aut, cre]
 Maintainer: m.eik michalke <meik.michalke@hhu.de>
 Depends: R (>= 2.10.0),koRpus (>= 0.12-1),sylly
